[gd_scene load_steps=4 format=3 uid="uid://wm22n6lc2tpa"]

[ext_resource type="Script" path="res://Skripte/Klassenzimmer.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://n6xfigbd7v1u" path="res://Grafiken/raum.png" id="2_we071"]
[ext_resource type="FontFile" uid="uid://b2rea3b2maxd6" path="res://Fonts/eraser/EraserDust.ttf" id="3_3fh6s"]

[node name="Klassenzimmer" type="Node2D"]
script = ExtResource("1")

[node name="Raum" type="Sprite2D" parent="."]
position = Vector2(580, 324.5)
scale = Vector2(1.125, 1.06833)
texture = ExtResource("2_we071")

[node name="Label" type="Label" parent="."]
offset_left = 78.0
offset_top = 40.0
offset_right = 463.0
offset_bottom = 395.0
rotation = -0.0635595
theme_override_fonts/font = ExtResource("3_3fh6s")
theme_override_font_sizes/font_size = 26
text = "Herzlich willkommen im Bereich Mechanik.
Möchtest du:

1.  Etwas über Werkzeuge erfahren?

2. Praktisch arbeiten?

3. Dein Wissen testen?"
autowrap_mode = 3

[node name="Wissen" type="Control" parent="Label"]
layout_mode = 3
anchors_preset = 0
offset_left = -3.15851
offset_top = 144.09
offset_right = 500.841
offset_bottom = 182.09
mouse_default_cursor_shape = 2

[node name="Praktisch" type="Control" parent="Label"]
layout_mode = 3
anchors_preset = 0
offset_left = -24.5251
offset_top = 227.902
offset_right = 497.475
offset_bottom = 263.902
mouse_default_cursor_shape = 2

[node name="Quiz" type="Control" parent="Label"]
layout_mode = 3
anchors_preset = 0
offset_left = -27.1476
offset_top = 284.851
offset_right = 494.852
offset_bottom = 320.851
mouse_default_cursor_shape = 2

[connection signal="gui_input" from="Label/Wissen" to="." method="_on_wissen_gui_input"]
[connection signal="gui_input" from="Label/Praktisch" to="." method="_on_praktisch_gui_input"]
[connection signal="gui_input" from="Label/Quiz" to="." method="_on_quiz_gui_input"]
